# CSC8508

./: .gitignore  CMakeLists.txt  CSC8503.sln
Assets/: AssetsToLoad.csv
Assets/Levels/: level1.json  level2.json  level3.json  levelTest.json
Assets/Shaders/: Skinning.vert
CSC8503/: AnimationController.cpp  AnimationController.h  AnimationObject.cpp  CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  Main.cpp  PCCmake.cmake  PS5Cmake.cmake  Player.cpp  Player.h  SampleLevel.h  TutorialGame.cpp  TutorialGame.h  imgui.ini  jsonParser.cpp  jsonParser.h
CSC8503/FMOD/PS5/api/core/examples/: output_ports.cpp
CSC8503/FMOD/PS5/api/studio/examples/: common_platform.cpp  common_platform.h
CSC8503/FMOD/PS5/doc/FMOD API User Manual/: core-api-channel.html  core-api-channelcontrol.html  core-api-channelgroup.html  core-api-common-dsp-effects.html  core-api-common.html  core-api-dsp.html  core-api-dspconnection.html  core-api-geometry.html  core-api-platform-android.html  core-api-platform-ios.html  core-api-platform-ps5.html  core-api-reverb3d.html  core-api-sound.html  core-api-soundgroup.html  core-api-system.html  core-api.html  platforms-android.html  platforms-html5.html  platforms-ios.html  platforms-linux.html  platforms-mac.html  platforms-openharmony.html  platforms-ps5.html  platforms-uwp.html  platforms-win.html  platforms.html  welcome-revision-history.html
CSC8503/PrisonEscape/: Player.cpp  Player.h
CSC8503/PrisonEscape/Core/: AudioManager.cpp  AudioManager.h  GameBase.cpp  GameBase.h  GameConfigManager.cpp  GameConfigManager.h  GameLevelManager.cpp  GameLevelManager.h  GameSettingManager.cpp  GameSettingManager.h  GameState.cpp  GameState.h  ImGuiManager.cpp  ImGuiManager.h  Level.cpp  Level.h  PrisonGameManager.cpp  PrisonGameManager.h
CSC8503/PrisonEscape/Core/Networking/: SteamManager.cpp  SteamManager.h
CSC8503/PrisonEscape/Levels/: Level.cpp  Level.h  LevelOne.cpp  LevelOne.h  LevelT.cpp  LevelT.h  SampleLevel.cpp  SampleLevel.h  StartLevel.cpp  StartLevel.h  level1.json  levelTest.json
CSC8503/PrisonEscape/Prefabs/PatrolEnemy/: PatrollingEnemy.cpp  PatrollingEnemy.h
CSC8503/PrisonEscape/Prefabs/Player/: PlayerOne.cpp  PlayerOne.h  PlayerTwo.cpp  PlayerTwo.h
CSC8503/PrisonEscape/Prefabs/PursuitEnemy/: PursuingEnemy.cpp  PursuingEnemy.h
CSC8503/PrisonEscape/Scripts/CameraEnemy/: CameraEnemy.cpp  CameraEnemy.h
CSC8503/PrisonEscape/Scripts/Collectables/: Coin.cpp  Coin.h
CSC8503/PrisonEscape/Scripts/PatrolEnemy/: PatrolEnemy.cpp  PatrolEnemy.h
CSC8503/PrisonEscape/Scripts/Player/: Player.cpp  Player.h
CSC8503/PrisonEscape/Scripts/PursuitEnemy/: PursuitEnemy.cpp  PursuitEnemy.h
CSC8503/PrisonEscape/Scripts/Puzzles/: Button.cpp  Button.h
CSC8503/PrisonEscape/Scripts/Unity json/: convertToJson.cs
CSC8503/PrisonEscape/Scripts/puzzle/: Button.cpp  Button.h  HidingArea.cpp  HidingArea.h  puzzleT.cpp  puzzleT.h
CSC8503/PrisonEscape/States/: GameState.cpp  GameState.h  GameoverState.cpp  GameplayState.cpp  GameplayState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h
CSC8503CoreClasses/: BehaviourSelector.h  BehaviourSequence.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  NetworkBase.cpp  NetworkBase.h  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderObject.cpp  RenderObject.h  SphereVolume.h
NCLCoreClasses/: AnimatedObject.cpp  AnimatedObject.h  Matrix.h  RendererBase.h  Vector.h
OpenGLRendering/: OGLRenderer.cpp
